[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/SpaceShip.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/World.gd" type="Script" id=2]
[ext_resource path="res://Fonts/zorque.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 42
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 42
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 3 )

[node name="World" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -149.0
margin_top = -130.0
margin_right = 709.0
margin_bottom = 1044.0
color = Color( 0.105882, 0.0196078, 0.0196078, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerShot" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="TimerScore" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Position2D" type="Position2D" parent="."]

[node name="SpaceShip" parent="Position2D" instance=ExtResource( 1 )]
position = Vector2( 302, 830 )

[node name="UI" type="YSort" parent="."]

[node name="Score" type="Label" parent="UI"]
margin_left = 18.0
margin_top = 32.0
margin_right = 168.0
margin_bottom = 83.0
custom_fonts/font = SubResource( 1 )
text = "Score"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Marcador" type="Label" parent="UI"]
margin_left = 178.0
margin_top = 33.0
margin_right = 237.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="Label" parent="UI"]
anchor_right = 1.0
margin_left = 35.0
margin_top = 365.0
margin_right = 549.0
margin_bottom = 446.0
custom_fonts/font = SubResource( 3 )
text = "Game Over
- Press the enter key to retry"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="TimerShot" to="." method="_on_TimerShot_timeout"]
[connection signal="timeout" from="TimerScore" to="." method="_on_TimerScore_timeout"]
[connection signal="game_over" from="Position2D/SpaceShip" to="." method="_on_SpaceShip_game_over"]
